--- a/MultiDBsINotebookServer/pom.xml
+++ b/MultiDBsINotebookServer/pom.xml
@@ -1,24 +1,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<artifactId>multidbsinotebookserver</artifactId>
-	<packaging>jar</packaging>
-	<name>MultiDBsINotebookServer</name>
+    <artifactId>multidbsinotebookserver</artifactId>
+    <packaging>jar</packaging>
+    <name>MultiDBsINotebookServer</name>
 
-	<parent>
-		<groupId>edu.pitt.sis.infsci2711</groupId>
-		<artifactId>main</artifactId>
-		<version>0.1-SNAPSHOT</version>
-	</parent>
+    <parent>
+        <groupId>edu.pitt.sis.infsci2711</groupId>
+        <artifactId>main</artifactId>
+        <version>0.1-SNAPSHOT</version>
+    </parent>
 
-	<properties>
-		<!-- ${project.parent.basedir} didn't work -->
-		<main.basedir>${project.basedir}/..</main.basedir>
-	</properties>
+    <properties>
+        <!-- ${project.parent.basedir} didn't work -->
+        <main.basedir>${project.basedir}/..</main.basedir>
+    </properties>
 
-	<dependencies>
-
-	</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.34</version>
+        </dependency>
+    </dependencies>
 </project>
