--- a/MultiDBsINotebookServerAPI/pom.xml
+++ b/MultiDBsINotebookServerAPI/pom.xml
@@ -55,6 +55,17 @@
             <artifactId>jetty-servlet</artifactId>
             <version>${jettyVersion}</version>
         </dependency>
+        
+        <dependency>
+            <groupId>edu.pitt.sis.infsci2711</groupId>
+            <artifactId>multidbsutils</artifactId>
+            <version>0.1-SNAPSHOT</version>
+        </dependency>
 
+        <dependency>
+            <groupId>edu.pitt.sis.infsci2711</groupId>
+            <artifactId>multidbsinotebookserver</artifactId>
+            <version>0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
